finished collapse, fixed responsive

--- a/src/SCSS/components/banner.scss
+++ b/src/SCSS/components/banner.scss
@@ -17,7 +17,7 @@
         transform: translate(-50%, -50%);
         color: white;
         font-weight: 500;
-        font-size: 2.4rem;
+        font-size: 2.4vw;
         border-radius: 10px;
     }
 }
