--- a/src/SCSS/components/collapse.scss
+++ b/src/SCSS/components/collapse.scss
@@ -17,7 +17,7 @@
         align-items: center;
         justify-content: center;
         border-radius: 10px;
-        transition-duration: 1s;
+        transition-duration: 0.5s;
         margin-bottom: 30px;
         padding: 20px;
     }
