--- a/src/SCSS/components/header.scss
+++ b/src/SCSS/components/header.scss
@@ -19,10 +19,14 @@
         justify-content: space-between;
         white-space: nowrap;
         color: #ff6060;
-        font-size: 1.2rem;
+        font-size: 1.1vw;
 
         a:hover {
             text-decoration: underline;
+        }
+
+        &__title {
+            display: flex;
         }
     }
 }
